[package]
name = "ctranslate2-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
derive_builder = "0.12.0"
regex = "1.8.4"
tokenizers = "0.13.3"
tokio = { workspace = true, features = ["rt"] }
tokio-util = { workspace = true }

[build-dependencies]
cxx-build = "1.0"
cmake = { version = "0.1", optional = true }
rust-cxx-cmake-bridge = { path = "../rust-cxx-cmake-bridge", optional = true }

[features]
default = ["dep:cmake", "dep:rust-cxx-cmake-bridge"]
link_shared = []
