[package]
name = "ctranslate2-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
dashmap = "5.4.0"
derive_builder = { workspace = true }
regex = "1.8.4"
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tokio-util = { workspace = true }
tabby-inference = { path = "../tabby-inference" }
async-trait = { workspace = true }

[build-dependencies]
cxx-build = "1.0"
cmake = { version = "0.1", optional = true }
rust-cxx-cmake-bridge = { path = "../rust-cxx-cmake-bridge", optional = true }

[features]
default = ["dep:cmake", "dep:rust-cxx-cmake-bridge"]
link_shared = []
