[package]
name = "ctranslate2-bindings"
version = "0.2.2-rc.2"
edition = "2021"

[dependencies]
cxx = "1.0"
derive_builder = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tokio-util = { workspace = true }
tabby-inference = { path = "../tabby-inference" }
async-trait = { workspace = true }
futures.workspace = true
async-stream.workspace = true

[build-dependencies]
cxx-build = "1.0"
cmake = { version = "0.1", optional = true }
rust-cxx-cmake-bridge = { path = "../rust-cxx-cmake-bridge", optional = true }

[features]
default = ["dep:cmake", "dep:rust-cxx-cmake-bridge"]
link_shared = []
