[package]
name = "http-api-bindings"
version = "0.10.0-rc.6"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-openai = "0.18.3"
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json = { workspace = true }
tabby-common = { version = "0.10.0-dev.0", path = "../tabby-common" }
tabby-inference = { version = "0.10.0-dev.0", path = "../tabby-inference" }
tracing.workspace = true
