[package]
name = "http-api-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-openai = "0.20"
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json = { workspace = true }
tabby-common = { path = "../tabby-common" }
tabby-inference = { path = "../tabby-inference" }
tracing.workspace = true

[dev-dependencies]
tokio ={ workspace = true, features = ["rt", "macros"]}
