[package]
name = "juniper-axum"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
axum.workspace = true
juniper.workspace = true
juniper_graphql_ws = "0.3.0"
serde.workspace = true
serde_json.workspace = true
base64 = { version = "0.13.1", features = [] }
