[package]
name = "llama-cpp-bindings"
version = "0.7.0"
edition = "2021"

[features]
cuda = []
rocm = []

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

[dependencies]
cxx = "1.0"
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tabby-inference = { path = "../tabby-inference" }
derive_builder = { workspace = true }
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true
