[package]
name = "llama-cpp-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
default = ["avx", "avx2", "fma", "f16c"]
cuda = []
rocm = []
vulkan = []
native = []
avx = []
avx2 = []
avx512 = []
avx512_vbmi = []
avx512_vnni = []
fma = []
f16c = []

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

[dependencies]
cxx = "1.0"
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tabby-inference = { path = "../tabby-inference" }
derive_builder = { workspace = true }
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true
