[package]
name = "tabby-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
home = "0.5.5"
lazy_static = { workspace = true }
serde = { workspace = true }
serdeconv = { workspace = true }
reqwest = { workspace = true, features = [ "json" ] }
uuid = { version = "1.4.1", features = ["v4"] }
tantivy.workspace = true
anyhow.workspace = true
utoipa.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
url.workspace = true
derive_builder.workspace = true
hash-ids.workspace = true
tracing.workspace = true
chrono.workspace = true
axum.workspace = true
axum-extra = { workspace = true, features = ["typed-header"] }
parse-git-url = "0.5.1"

[dev-dependencies]
temp_testdir = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
testutils = []

[package.metadata.cargo-machete]
ignored = [
    # required in utoipa ToSchema.
    "serde_json"
]
