[package]
name = "tabby-crawler"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true, features = ["io-util", "process", "rt"] }
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
readable-readability = "0.4.0"
futures.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
logkit.workspace = true
htmd = "0.1"
regex.workspace = true

[dev-dependencies]
tracing-test.workspace = true
tokio = { workspace = true, features = ["macros"] }
