[package]
name = "tabby-download"
version = "0.24.0-dev.0"
edition = "2021"

[dependencies]
aim-downloader = { path = "../aim-downloader" }
tabby-common = { path = "../tabby-common" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-retry = "0.3.0"

[dev-dependencies]
serial_test = { workspace = true }
