[package]
name = "tabby-download"
version = "0.26.0-dev.0"
edition = "2021"

[dependencies]
aim-downloader = { path = "../aim-downloader" }
tabby-common = { path = "../tabby-common" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-retry = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
