[package]
name = "tabby-index-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"]}
tantivy.workspace = true
tabby-common = { path = "../tabby-common" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
