[package]
name = "tabby-repositories"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
tabby-common = { path = "../tabby-common" }
serde_json = { workspace = true }
