[package]
name = "tabby-repositories"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tabby-common = { path = "../tabby-common" }
kv = { version = "0.24.0", features = ["json-value"] }
