[package]
name = "tabby-repositories"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tabby-common = { path = "../tabby-common" }
tantivy = { workspace = true }
tracing = { workspace = true }
tree-sitter-tags = "0.20.2"
lazy_static = { workspace = true }
tree-sitter-python = "0.20.2"
tree-sitter-java = "0.20.2"
tree-sitter-kotlin = "0.3.1"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.3"
tree-sitter-go = "0.20.0"
tree-sitter-ruby = "0.20.0"
tree-sitter-c = { git = "https://github.com/tree-sitter/tree-sitter-c/", rev = "212a80f" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "a714740" }
tree-sitter-c-sharp = "0.20.0"
tree-sitter-solidity = { git = "https://github.com/JoranHonig/tree-sitter-solidity", rev = "b239a95" }
ignore = "0.4.20"
kdam = { version = "0.5.0" }
requirements = "0.3.0"
serdeconv.workspace = true
cargo-lock = { version = "9.0.0", features = ["dependency-tree"] }
tokio-cron-scheduler = { workspace = true }
tokio = { workspace = true, features = ["process"] }
package-lock-json-parser = "0.4.0"
npm-package-json = "0.1.3"
yarn-lock-parser = "0.7.0"
kv = { version = "0.24.0", features = ["json-value"] }
