[package]
name = "tabby-scheduler"
version = "0.7.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
job_scheduler = "1.2.1"
tabby-common = { path = "../tabby-common" }
tantivy = { workspace = true }
tracing = { workspace = true }
tree-sitter-tags = "0.20.2"
lazy_static = { workspace = true }
serde-jsonlines = { workspace = true }
file-rotate = "0.7.5"
tree-sitter-python = "0.20.2"
tree-sitter-java = "0.20.2"
tree-sitter-kotlin = "0.3.1"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.3"
tree-sitter-go = "0.20.0"
tree-sitter-ruby = "0.20.0"
tree-sitter-c = { git = "https://github.com/tree-sitter/tree-sitter-c/", rev = "212a80f" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "a714740" }
ignore = "0.4.20"
kdam = { version = "0.5.0" }
requirements = "0.3.0"
serdeconv.workspace = true
cargo-lock = { version = "9.0.0", features = ["dependency-tree"] }

[dev-dependencies]
temp_testdir = "0.2"
tabby-common = { path = "../tabby-common", features = [ "testutils" ] }
tracing-test = "0.1"
tokio = { workspace = true, features = ["rt"] }
serde_json = { workspace = true }
