[package]
name = "tabby-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
tabby-common = { path = "../tabby-common" }
tantivy = { workspace = true }
tracing = { workspace = true }
tree-sitter-tags = "0.20.2"
lazy_static = { workspace = true }
tree-sitter-python = "0.20.2"
tree-sitter-java = "0.20.2"
tree-sitter-kotlin = "0.3.1"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.3"
tree-sitter-go = "0.20.0"
tree-sitter-ruby = "0.20.0"
tree-sitter-c = { git = "https://github.com/tree-sitter/tree-sitter-c/", rev = "212a80f" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "a714740" }
tree-sitter-c-sharp = "0.20.0"
tree-sitter-solidity = { git = "https://github.com/JoranHonig/tree-sitter-solidity", rev = "b239a95" }
ignore.workspace = true
tokio-cron-scheduler = { workspace = true }
tokio = { workspace = true, features = ["process"] }
text-splitter = "0.10.0"
kv = { version = "0.24.0", features = ["json-value"] }
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-stream.workspace = true
mdka = "1.2.4"
readable-readability = "0.4.0"
url.workspace = true
voca_rs = "1.15.2"
tabby-inference = { path = "../tabby-inference" }

[dev-dependencies]
temp_testdir = { workspace = true }
tabby-common = { path = "../tabby-common", features = [ "testutils" ] }
tracing-test = "0.2"
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
