[package]
name = "tabby"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
default = ["ee", "experimental-http"]
ee = ["dep:tabby-webserver"]
cuda = ["llama-cpp-bindings/cuda"]
rocm = ["llama-cpp-bindings/rocm"]
vulkan = ["llama-cpp-bindings/vulkan"]
experimental-http = ["dep:http-api-bindings"]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static-ssl = ['openssl/vendored']
prod = ['tabby-webserver/prod-db']

[dependencies]
tabby-common = { path = "../tabby-common" }
tabby-scheduler = { path = "../tabby-scheduler" }
tabby-download = { path = "../tabby-download" }
tabby-inference = { path = "../tabby-inference" }
axum.workspace = true
axum-extra = {workspace = true, features = ["typed-header"]}
hyper = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
serde = { workspace = true }
serdeconv = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["cors", "timeout"] }
clap = { version = "4.3.0", features = ["derive"] }
lazy_static = { workspace = true }
strum = { workspace = true }
strfmt = "0.2.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tantivy = { workspace = true }
anyhow = { workspace = true }
sysinfo = "0.29.8"
nvml-wrapper = "0.9.0"
http-api-bindings = { path = "../http-api-bindings", optional = true }      # included when build with `experimental-http` feature
async-stream = { workspace = true }
minijinja = { version = "1.0.8", features = ["loader"] }
textdistance = "1.0.2"
regex.workspace = true
llama-cpp-bindings = { path = "../llama-cpp-bindings" }
futures.workspace = true
async-trait.workspace = true
tabby-webserver = { path = "../../ee/tabby-webserver", optional = true }
thiserror.workspace = true
chrono.workspace = true
axum-prometheus = "0.6"
uuid.workspace = true
cached = { workspace = true, features = ["async"] }
parse-git-url = "0.5.1"

[target.'cfg(debug_assertions)'.dependencies]
color-eyre = { version = "0.6.3" }

[dependencies.openssl]
optional = true
version = "*"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }

assert-json-diff = "2.0.2"
insta = { version = "1.34.0", features = ["yaml", "redactions"] }
reqwest.workspace = true
serde-jsonlines = "0.5.0"
reqwest-eventsource = { workspace = true }
serial_test = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["openssl"]
