[package]
name = "tabby-db-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
