[package]
name = "tabby-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
testutils = []
prod-db = []

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
hash-ids = "0.2.1"
lazy_static.workspace = true
sqlx = { version = "0.7.3", features = ["sqlite", "chrono", "runtime-tokio"] }
tabby-common = { path = "../../crates/tabby-common" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
uuid.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { workspace = true, features = ["macros", "process"] }
