[package]
name = "tabby-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
testutils = []

[dependencies]
tabby-db-macros = { path = "../tabby-db-macros" }
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
hash-ids.workspace = true
lazy_static.workspace = true
sql_query_builder = { version = "2.1.0", features = ["sqlite"] }
sqlx = { version = "0.7.3", features = ["sqlite", "chrono", "runtime-tokio", "macros"] }
tokio = { workspace = true, features = ["fs"] }
uuid.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { workspace = true, features = ["macros", "process"] }
