[package]
name = "tabby-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["ws", "headers"] }
base64 = "0.22.0"
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
hyper = { workspace = true, features = ["client"] }
juniper.workspace = true
lazy_static.workspace = true
serde.workspace = true
strum.workspace = true
tabby-db = { path = "../../ee/tabby-db" }
tabby-common = { path = "../../crates/tabby-common" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process"] }
tracing.workspace = true
validator = { version = "0.16.1", features = ["derive"] }
regex.workspace = true
hash-ids.workspace = true
