[package]
name = "tabby-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
schema-language = ["juniper/schema-language"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true }
base64 = "0.22.0"
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
juniper = { workspace = true, features = ["chrono"] }
lazy_static.workspace = true
serde.workspace = true
strum.workspace = true
tabby-db = { path = "../../ee/tabby-db" }
tabby-common = { path = "../../crates/tabby-common" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process"] }
tracing.workspace = true
validator = { version = "0.18.1", features = ["derive"] }
regex.workspace = true
hash-ids.workspace = true
url.workspace = true

[dev-dependencies]
tabby-db = { path = "../../ee/tabby-db", features = ["testutils"]}

[[example]]
name = "update-schema"
path = "examples/update-schema.rs"
required-features = ["schema-language"]
